--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - MeghanaRao-CBATest
   pull_request:
-    
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -28,8 +28,9 @@ jobs:
       run: |
         pytest --html=report.html --self-contained-html
 
-    - name: Upload Test Report
-      uses: actions/upload-artifact@v3
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        name: test-report
-        path: report.html
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./
+        publish_branch: gh-pages
