--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - MeghanaRao-CBATest
   pull_request:
-
+    
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -28,9 +28,11 @@ jobs:
       run: |
         pytest --html=report.html --self-contained-html
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - name: List files
+      run: ls -R
+
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
-        publish_branch: gh-pages
+        name: test-report
+        path: report.html
